Search by full name

--- a/Main/Views/Workers/Index.cshtml
+++ b/Main/Views/Workers/Index.cshtml
@@ -20,9 +20,9 @@
         @*<select asp-for="workerSecondName" asp-items="Model.SecondNames">
             <option value="">-</option>
         </select>*@
-        First Name: <input type="text" name="SearchString">
+        Search by Full Name: <input type="text" name="SearchString">
         <input type="submit" value="Filter" />
-        |<a asp-action="Index">Back to Full List</a>
+         | <a asp-action="Index">Back to Full List</a>
     </p>
 </form>
 
