Added search by full name, birthday notification, started doing email sending with notification, need to look into workercontroller, added email subclass

--- a/Main/Views/Workers/Delete.cshtml
+++ b/Main/Views/Workers/Delete.cshtml
@@ -36,8 +36,14 @@
         <dd>
             @Html.DisplayFor(model => model.WorkStartDate)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
