--- a/Main/Views/Workers/Details.cshtml
+++ b/Main/Views/Workers/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.WorkStartDate)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
     </dl>
 </div>
 <div>
