--- a/Main/Views/Workers/Edit.cshtml
+++ b/Main/Views/Workers/Edit.cshtml
@@ -11,7 +11,7 @@
         <h4>Worker</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="ID" />
+        <input type="hidden" asp-for="ID" />
         <div class="form-group">
             <label asp-for="FirstName" class="col-md-2 control-label"></label>
             <div class="col-md-10">
@@ -29,15 +29,22 @@
         <div class="form-group">
             <label asp-for="BirthdayDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="BirthdayDate" class="form-control" placeholder="YYYY-MM-DD" />
+                <input asp-for="BirthdayDate" type="date" class="form-control" placeholder="YYYY-MM-DD" />
                 <span asp-validation-for="BirthdayDate" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
             <label asp-for="WorkStartDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="WorkStartDate" class="form-control" />
+                <input asp-for="WorkStartDate" type="date" class="form-control" placeholder="YYYY-MM-DD" />
                 <span asp-validation-for="WorkStartDate" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Email" class="form-control" type="email"/>
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
