--- a/Main/Views/Workers/Index.cshtml
+++ b/Main/Views/Workers/Index.cshtml
@@ -13,7 +13,7 @@
 <form asp-controller="Workers" asp-action="Index">
        @foreach (var item in Model) {
                @if (item.isTodayBirthday(item.BirthdayDate)) { 
-                   <p><a asp-action="Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.SecondName)</a> svencia gimtadieni</p>
+                   <p><a asp-action="Details" asp-route-id="@item.ID">@Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.SecondName)</a> svencia gimtadieni. <a a asp-action="SendEmail" asp-route-id="@item.ID">Pasveikink!</a></p>
                }  
        }
     <p>
