Slack messages turned to english, added a method in which on startup it prints a message to console, that need to be changed with slack, the main problem is to how to access database with static method. Plans for future is to make this a service, so it opens everytime computer launches. Also added birthdayflag to workers

--- a/Main/Views/Workers/SendEmail.cshtml
+++ b/Main/Views/Workers/SendEmail.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "SendEmail";
 }
 
-<h2>Pasveikink!</h2>
+<h2>Send a congratulations message!</h2>
 
 @*<form asp-action="SendEmail">
     <div class="form-horizontal">
